chore: Registrar novos módulos no app e atualizar docs
## Integração dos módulos

### app.ts:
- Registrado foodsController em /api/foods
- Registrado diaryController em /api/diary
- Registrado problematicFoodsController em /api/diary/problematic-foods

### package.json:
- Adicionado script: "seed:foods" para popular banco de dados

### docs/plans/BACKEND-DEVELOPMENT-PLAN.md:
- Atualizado progresso das etapas 3-6
- Documentação dos endpoints implementados

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "bun test",
     "lint": "bunx biome check src/",
     "format": "bunx biome format src/ --write",
-    "db:seed": "bun run src/scripts/seed.ts"
+    "db:seed": "bun run src/scripts/seed.ts",
+    "db:seed-foods": "bun run scripts/seed-foods.ts"
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.4.1",
