--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@elysiajs/bearer": "^1.4.1",
     "@elysiajs/cors": "^1.4.0",
     "@elysiajs/jwt": "^1.4.0",
+    "@elysiajs/static": "^1.4.7",
     "@elysiajs/swagger": "^1.3.1",
     "bcrypt": "^6.0.0",
     "dayjs": "^1.11.19",
