feat: add MongoDB authentication config and test script

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,14 @@ NODE_ENV=development
 # =============================================================================
 # Database
 # =============================================================================
+# Local sem autenticação (desenvolvimento)
 MONGODB_URI=mongodb://localhost:27017/ceboelha
-# ou MongoDB Atlas:
-# MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/ceboelha
+
+# Local com autenticação (Docker/Produção)
+# MONGODB_URI=mongodb://admin:password@localhost:27017/ceboelha?authSource=admin
+
+# MongoDB Atlas
+# MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/ceboelha?retryWrites=true&w=majority
 
 # =============================================================================
 # JWT - IMPORTANT: Use strong, random secrets!
