fix: disable Nixpacks completely to force Dockerfile usage

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,20 +1,7 @@
 # =============================================================================
 # Nixpacks Configuration for Ceboelha API
 # =============================================================================
-# This tells Coolify to use Dockerfile instead of auto-detection
+# Disable Nixpacks - Use Dockerfile instead
 
-[phases.setup]
-nixPkgs = []
-
-[phases.build]
-cmds = []
-
-[phases.install]
-cmds = []
-
-# Force Coolify to use Dockerfile
-[build]
-buildImage = "oven/bun:1"
-
-[start]
-cmd = "bun run src/index.ts"
+[providers]
+disable = true
